@@ -1,3 +1,9 @@
+2002-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* tests/io.test: io-39.22 split into two tests, one platform
+	  dependent, the other not. -eofchar is not empty on the windows
+	  platform.
+
 2002-02-01  Vince Darley <vincentdarley@users.sourceforge.net>
 
 	* generic/tclTest.c: fix to picky windows compiler problem
